DISTCLEANFILES = *~ *.~*

SUBDIRS = src

bin_SCRIPTS = contrib/melt.sh contrib/freeze.sh contrib/poorZFS.py

doc_DATA = README COPYING INSTALL AUTHORS NEWS ChangeLog docs/README.RS32

EXTRA_DIST = README COPYING INSTALL AUTHORS NEWS ChangeLog contrib/freeze.sh contrib/melt.sh contrib/poorZFS.py docs/README.RS32
